--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,24 +1,38 @@
-html,
-body,
-div{
-  background: #fff;
-  margin: 0;
-  padding: 0;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  z-index : 0;
+body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-
-.swiper {
-  width: 100%;
-  height: 100%;
+.container {
+    width: 850px;
+    margin-top: 50px;
 }
-
+.swiper-container {
+    width: 100%; /* 부모 요소의 크기를 따름 */
+    height: auto;
+}
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-slide-active {
+    justify-content: center;
+}
+.slide-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+.slide-content span {
+    margin-right: 10px;
+}
+.slide-content img {
+    width: 50px;
+    margin-right: 10px;
 }
