--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,121 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" th:href="@{/test22.css}">
-    <title>OOTD</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <script type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_APP_KEY&libraries=services,clusterer,drawing"></script>
-</head>
+<html layout:decorate="~{layout}">
 <body>
-<div>
-    <input type="text" id="sample5_address" placeholder="주소">
-    <input type="button" onclick="sample5_execDaumPostcode()" value="주소 검색"><br>
-    <div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
-
-    <button onclick="reloadMap()">
-        <img src="/img/gps.png" style="width: 24px; cursor: pointer;">
-    </button>
-    <h1>datetimepicker</h1>
-    시작일시 : <input type='text' class='datetimepicker' name='start_dt'  style='width:140px;'>,
-    종료일시 : <input type='text' class='datetimepicker' name='end_dt'   style='width:140px; padding-left:10px;'>
-
-
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5bd204a017173d719eef05bd1456fcbf&libraries=services"></script>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=LIBRARY"></script>
-<!--DatePicker  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
-
-    <script>
-    $(function() {
-        var minDate = new Date();
-        var maxDate = new Date();
-        maxDate.setDate(maxDate.getDate() + 2); // 현재 날짜로부터 2일 이내
-
-        $(".datetimepicker").datetimepicker({
-            format: "Y-m-d H:i",
-            minDate: minDate,
-            maxDate: maxDate
-        });
-    });
-
-
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-      mapOption = {
-          center: new daum.maps.LatLng(37.537187, 127.005476), // 지도의 중심좌표
-          level: 5 // 지도의 확대 레벨
-      };
-
-    //지도를 미리 생성
-     var map = new daum.maps.Map(mapContainer, mapOption);
-    //주소-좌표 변환 객체를 생성
-    var geocoder = new daum.maps.services.Geocoder();
-    //마커를 미리 생성
-    var marker = new daum.maps.Marker({
-      position: new daum.maps.LatLng(37.537187, 127.005476),
-      map: map
-    });
-
-    function sample5_execDaumPostcode() {
-      new daum.Postcode({
-          oncomplete: function(data) {
-              var addr = data.address; // 최종 주소 변수
-
-              // 주소 정보를 해당 필드에 넣는다.
-              document.getElementById("sample5_address").value = addr;
-              // 주소로 상세 정보를 검색
-              geocoder.addressSearch(data.address, function(results, status) {
-                  // 정상적으로 검색이 완료됐으면
-                  if (status === daum.maps.services.Status.OK) {
-
-                      var result = results[0]; //첫번째 결과의 값을 활용
-                      var roadAddress = results[0].road_address;
-                      var sido = roadAddress.region_1depth_name;
-                      var gugun = roadAddress.region_2depth_name;
-                      var address = sido+' '+gugun;
-
-                      // 해당 주소에 대한 좌표를 받아서
-                      var coords = new daum.maps.LatLng(result.y, result.x);
-                      // 지도를 보여준다.
-                      mapContainer.style.display = "block";
-                      map.relayout();
-                      // 지도 중심을 변경한다.
-                      map.setCenter(coords);
-                      // 마커를 결과값으로 받은 위치로 옮긴다.
-                      marker.setPosition(coords)
-                  }
-              });
-          }
-      }).open();
-    }
-
-    function error() {
-      alert('위치를 가져올 수 없습니다.');
-    }
-
-    function gotest(){
-      if (confirm("입력한 주소가 맞습니까?")) {
-<!--                            sendCoordinates(result.y, result.x, addr);-->\
-          sendCoordinates(result.y, result.x, address);
-      }
-    }
-
-    function reloadMap() {
-      if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(success, error);
-      } else {
-          alert('GPS를 지원하지 않습니다');
-      }
-    }
-
-    function sendCoordinates(latitude, longitude, address) {
-     window.location.href = '/weatherData?nx=' + latitude + '&ny=' + longitude + '&address=' + address;
-    }
-
-</script>
+<div layout:fragment="content">
+        <span>안녕?</span>
 </div>
-
+</body>
+</html>
