--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html layout:decorate="~{layout}">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" th:href="@{/main.css}">
     <title>Weather2Wear</title>
+    <style>
+        .bold {
+            font-weight: bold;
+            color : #349beb;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_APP_KEY&libraries=services,clusterer,drawing"></script>
@@ -20,10 +26,13 @@
                 if (fcstTime === "0000") {
                     if (fcstDate == todayStr) {
                         span.textContent = "오늘";
+                        span.classList.add("bold");
                     } else if (fcstDate == tomorrowStr) {
                         span.textContent = "내일";
+                        span.classList.add("bold");
                     } else if (fcstDate == dayAfterTomorrowStr) {
                         span.textContent = "모레";
+                        span.classList.add("bold");
                     }
                 } else {
                     span.textContent = fcstTime.substring(0, 2) + "시";
@@ -33,64 +42,67 @@
     </script>
 </head>
 <body>
-<div style="width : 100%;">
-    <span th:text="${address}" style="font-size : xxx-large;"></span>
-    <button onclick="ExecDaumPostcode()">
-        <img src="/img/search.png" style="width: 24px; cursor: pointer;">
-    </button>
-</div>
-<!--    <input type="text" id="address" placeholder="주소"> -->
-<div>
-    <div style="display: flex; align-items: center; justify-content: space-evenly; height: 172px; margin-top : 5px;">
-        <div style="display: flex; flex-direction: column; align-items: center">
-            <div style="display: flex; flex-direction: column; align-items: flex-end;">
-                <div style="display : flex; align-items: center;">
-                    <img th:if="${nowWeather.SKY} == 1" src="/img/clear-day.svg" style="width: 100px;">
-                    <img th:if="${nowWeather.SKY} == 3" src="/img/partly-cloudy-day.svg" style="width: 100px;">
-                    <img th:if="${nowWeather.SKY} == 4" src="/img/partly-cloudy-day.svg" style="width: 100px;">
-                    <span th:text="${nowWeather.TMP} +'°'" style="font-size : xxx-large; margin-left: -38px;"></span>
+
+<div layout:fragment="content" style="display: flex; flex-direction: column; justify-content: center;">
+<!--    <div style="width : 100%;">-->
+<!--        <button onclick="ExecDaumPostcode()">-->
+<!--            <img src="/img/search.png" style="width: 24px; cursor: pointer;">-->
+<!--        </button>-->
+<!--    </div>-->
+    <div>
+        <div style="display: flex; align-items: center; justify-content: space-evenly; height: 172px; margin-top : 5px;">
+            <div style="display: flex; flex-direction: column; align-items: center">
+                <div style="display: flex; flex-direction: column; align-items: flex-end;">
+                    <div style="display : flex; align-items: center;">
+                        <img th:if="${nowWeather.SKY} == 1" src="/img/clear-day.svg" style="width: 100px;">
+                        <img th:if="${nowWeather.SKY} == 3" src="/img/partly-cloudy-day.svg" style="width: 100px;">
+                        <img th:if="${nowWeather.SKY} == 4" src="/img/partly-cloudy-day.svg" style="width: 100px;">
+                        <span th:text="${nowWeather.TMP} +'°'"
+                              style="font-size : xxx-large; margin-left: -38px;"></span>
+                    </div>
+                </div>
+                <div>
+                    <span th:text="'습도 ' + ${nowWeather.REH} + '%'"></span>
                 </div>
             </div>
-            <div>
-                <span th:text="'습도 ' + ${nowWeather.REH} + '%'"></span>
+<!--            <div id="map" style="width: 17%; height: 151px;"></div>-->
+            <div style="display : flex;">
+                <div style="width : 312px; height : 150px;">
+                    <canvas id="myChart"></canvas>
+                </div>
             </div>
         </div>
-        <div id="map" style="width: 17%; height: 151px;"></div>
-        <div style="display : flex;">
-            <div style="width : 312px; height : 150px;">
-                <canvas id="myChart"></canvas>
-            </div>
-        </div>
-    </div>
-    <div style="width: 850px; margin-top : 50px;">
-        <div class="swiper-container">
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide" style="display : flex;" th:each="dto : ${dtoList}">
-                        <div style="display : flex; justify-content: center;">
-                            <div th:each="dtoItem : ${dto}" style="display: flex; justify-content: center;">
-                                <div th:if="${dtoItem.fcstDate + dtoItem.fcstTime  >= todayStr + currentTime}"
-                                     style="display: flex; justify-content: center;">
-                                    <div style="display: flex; flex-direction: column; align-items: center; margin : 5px;">
-                                        <span th:text="${dtoItem.TMP + '°'}"></span>
-                                        <img src="/img/clear-day.svg" th:if="${dtoItem.SKY} == 1"
-                                             style="width : 50px;">
-                                        <img src="/img/partly-cloudy-day.svg" th:if="${dtoItem.SKY} == 3"
-                                             style="width : 50px;">
-                                        <img src="/img/partly-cloudy-day.svg" th:if="${dtoItem.SKY} == 4"
-                                             style="width : 50px;">
-<!--                                        <span th:text="${#strings.substring(dtoItem.fcstTime, 0, 2)}+시"-->
-<!--                                              style="font-size : small;"></span>-->
-                                        <span class="fcstTimeSpan" th:attr="data-fcstDate=${dtoItem.fcstDate},data-fcstTime=${dtoItem.fcstTime}"
-                                              style="font-size : small;"></span>
+        <div style="width: 850px; margin-top : 50px;">
+            <div class="swiper-container">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide" style="display : flex;" th:each="dto : ${dtoList}">
+                            <div style="display : flex; justify-content: center;">
+                                <div th:each="dtoItem : ${dto}" style="display: flex; justify-content: center;">
+                                    <div th:if="${dtoItem.fcstDate + dtoItem.fcstTime  >= todayStr + currentTime}"
+                                         style="display: flex; justify-content: center;">
+                                        <div style="display: flex; flex-direction: column; align-items: center; margin : 5px;">
+                                            <span th:text="${dtoItem.TMP + '°'}"></span>
+                                            <img src="/img/clear-day.svg" th:if="${dtoItem.SKY} == 1"
+                                                 style="width : 50px;">
+                                            <img src="/img/partly-cloudy-day.svg" th:if="${dtoItem.SKY} == 3"
+                                                 style="width : 50px;">
+                                            <img src="/img/partly-cloudy-day.svg" th:if="${dtoItem.SKY} == 4"
+                                                 style="width : 50px;">
+                                            <!--                                        <span th:text="${#strings.substring(dtoItem.fcstTime, 0, 2)}+시"-->
+                                            <!--                                              style="font-size : small;"></span>-->
+                                            <span class="fcstTimeSpan"
+                                                  th:attr="data-fcstDate=${dtoItem.fcstDate},data-fcstTime=${dtoItem.fcstTime}"
+                                                  style="font-size : small;"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
             </div>
         </div>
     </div>
